@@ -68,6 +68,7 @@ tests = [
 
     (1, './04-retain-check-source-persist.py'),
     (1, './04-retain-check-source.py'),
+	(1, './04-retain-clear-multiple.py'),
     (1, './04-retain-qos0-clear.py'),
     (1, './04-retain-qos0-fresh.py'),
     (1, './04-retain-qos0-repeated.py'),
